--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "JSONStream": "^1.3.0",
     "body-parser": "~1.16.0",
     "buffered-reader": "^1.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "event-stream": "^3.3.4",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta10",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "xss": "^0.3.3"
   }
 }
